--- a/StoreFront.UI.MVC/Views/Products/Create.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Create.cshtml
@@ -1,16 +1,14 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add new Product";
 }
 
-<h1>Create</h1>
 
-<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
@@ -40,8 +38,9 @@
                 <select asp-for="StatusId" class ="form-control" asp-items="ViewBag.StatusId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProductImage" class="control-label"></label>
-                <input asp-for="ProductImage" class="form-control" />
+                <label asp-for="ProductImage" class="control-label" />
+                @*<label asp-for="ProductImage" class="control-label"></label>*@
+                <input type="file" asp-for="Image" class="form-control" />
                 <span asp-validation-for="ProductImage" class="text-danger"></span>
             </div>
             <div class="form-group">
