--- a/StoreFront.UI.MVC/Views/Products/Delete.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Delete.cshtml
@@ -33,7 +33,8 @@
             @Html.DisplayNameFor(model => model.ProductImage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductImage)
+            @*@Html.DisplayFor(model => model.ProductImage)*@
+            <img src="~/img/@Model.ProductImage" alt="@Model.ProductDescription" class="img-fluid" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UnitsInStock)
@@ -69,7 +70,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete Forever" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to Products</a>
     </form>
 </div>
