--- a/StoreFront.UI.MVC/Views/Products/Details.cshtml
+++ b/StoreFront.UI.MVC/Views/Products/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model StoreFront.DATA.EF.Models.Product
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = Model.ProductName + " Details";
 }
 
 <h1>Details</h1>
@@ -32,7 +32,8 @@
             @Html.DisplayNameFor(model => model.ProductImage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductImage)
+            @*@Html.DisplayFor(model => model.ProductImage)*@
+            <img src="~/img/@Model.ProductImage" alt="@Model.ProductDescription" class="img-fluid" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UnitsInStock)
@@ -67,6 +68,13 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ProductId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    @if (User.IsInRole("Admin"))
+    {
+        <span>
+            <a asp-action="Edit" asp-route-id="@Model?.ProductId">Edit</a> |
+        </span>
+    }
+
+    <a asp-action="Index">Back to Products</a>
 </div>
